DEV/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin_SalesforceIQ__c</fullName>
        <label>Origin (created by SalesforceIQ)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SalesforceIQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceIQ_Id__c</fullName>
        <label>SalesforceIQ Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fid6__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fidled__c</fullName>
        <label>Last Event Date (sort)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fidprocessclosedate__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fidprocessowner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Clean_Mobile_Phone__c</fullName>
        <description>xSMS : cleaned mobile number for xSMS</description>
        <formula>xsms__Mobile_Phone_Country_Code__c +&apos;-&apos;+TRIM ( SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(SUBSTITUTE(IF(BEGINS(MobilePhone,&apos;0&apos;),RIGHT(MobilePhone, LEN(MobilePhone)-1),MobilePhone),&apos; &apos;,&apos;&apos;),&apos;-&apos;,&apos;&apos;), 
&apos;+&apos;,&apos;&apos; 
), 
&apos;(&apos;,&apos;&apos; 
) 
,&apos;)&apos;,&apos;&apos; 
) 
)</formula>
        <inlineHelpText>xSMS : cleaned mobile number for xSMS</inlineHelpText>
        <label>Clean Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Inbound_MobilePhone_Format__c</fullName>
        <formula>xsms__Mobile_Phone_Country_Code__c+TRIM ( SUBSTITUTE( 
				SUBSTITUTE( 
				SUBSTITUTE( 
				SUBSTITUTE(SUBSTITUTE(MobilePhone,&apos; &apos;,&apos;&apos;),&apos;-&apos;,&apos;&apos;), 
				&apos;+&apos;,&apos;&apos; 
				), 
				&apos;(&apos;,&apos;&apos; 
				) 
				,&apos;)&apos;,&apos;&apos; 
				) 
				)</formula>
        <label>Inbound MobilePhone Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Last_SMS_received__c</fullName>
        <description>Details of last received SMS</description>
        <inlineHelpText>Details of last received SMS</inlineHelpText>
        <label>Last SMS received</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xsms__Mobile_Phone_Country_Code__c</fullName>
        <description>country isd code.</description>
        <inlineHelpText>country isd code.</inlineHelpText>
        <label>Mobile Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Mobile_Phone_Country__c</fullName>
        <description>select country for provided mobile phone for sending SMS</description>
        <inlineHelpText>select country for provided mobile phone for sending SMS</inlineHelpText>
        <label>Mobile Phone Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra/Vatican City</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antarctica/Norfolk Island</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>Australia/Christmas Island/Cocos-Keeling Islands</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzogovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burma (Myanmar)</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xsms__SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No SMS would be send to Lead if SMS Opt Out is marked true.</description>
        <inlineHelpText>No SMS would be send to Lead if SMS Opt Out is marked true.</inlineHelpText>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>